Update get_spigot_versions.sh